fixed scrollbar

--- a/frontend/src/views/pages/CoursesCompleted.css
+++ b/frontend/src/views/pages/CoursesCompleted.css
@@ -51,6 +51,3 @@
     padding-left: 15px;
     padding-right: 15px;
   }
-  body {
-    overflow: hidden;
-  }
